# bullet-heck-launcher-rust

./: .gitignore  Cargo.toml  README.md  build.rs
hello_cargo/src/: main.rs
src/: main.rs  settings.rs  ui.slint
ui/: MainWindow.slint
