[package]
name = "bullet-heck-launcher-rust"
version = "0.1.0"
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0.2"
slint-build = "1.0.0"
toml = "0.7.4"

[build-dependencies]
slint-build = "1.0.0"
