[package]
name = "bullet-heck-launcher-rust"
version = "0.1.0"
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msgbox = "0.7.0"
slint = "1.0.2"
slint-build = "1.0.2" # Despite not seeming necessary, this is apparently required for the .gif to render
toml = "0.7.4"

[build-dependencies]
slint-build = "1.0.2"
